# nara-to-yaml

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md  nara-to-yaml.c  nara_base.c  nara_base.h  nara_base.h.in  nara_classroom.h  nara_classroom_impl.c  nara_district_impl.c  nara_ebcdic.c  nara_ebcdic.h  nara_record.c  nara_record.h  nara_record_header.c  nara_record_header.h  nara_record_impl.h  nara_school.h  nara_school_impl.c  nara_state_header.c  nara_state_header.h
1976/: nara_classroom.h  nara_classroom_impl.c  nara_district.h  nara_district_impl.c  nara_school.h  nara_school_impl.c
1986/: nara_district.h  nara_district_impl.c  nara_school.h  nara_school_impl.c  nara_summary.h  nara_summary_impl.c
pre-1976/: nara_classroom_impl.c  nara_district.h  nara_district_impl.c  nara_school_impl.c
