#
# CMake configuratoin for nara-to-yaml
#
CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(nara-to-yaml LANGUAGES C)

INCLUDE(GNUInstallDirs)

IF (NOT DEFINED SHOULD_OMIT_RPATHS)
    OPTION(SHOULD_OMIT_RPATHS "Do not embed library prefix paths into executables." FALSE)
ENDIF ()

SET(NARA_FORMAT_OPTIONS PRE_1976 1976 1986)
SET(NARA_FORMAT PRE_1976 CACHE STRING "File format version")
SET_PROPERTY(CACHE NARA_FORMAT PROPERTY STRINGS ${NARA_FORMAT_OPTIONS})

OPTION(HAVE_EBCDIC_ENCODING "Files use EBCDIC string encodings" On)

# Default source files:
SET(NARA_SOURCES nara_base.c nara_state_header.c nara_record_header.c nara_record.c nara-to-yaml.c)
IF (HAVE_EBCDIC_ENCODING)
    SET(NARA_SOURCES ${NARA_SOURCES} nara_ebcdic.c)
ENDIF ()

IF (SHOULD_OMIT_RPATHS)
    SET(CMAKE_SKIP_RPATH TRUE)
ENDIF()

ADD_EXECUTABLE(nara-to-yaml ${NARA_SOURCES})
IF (NARA_FORMAT EQUAL "1986")
    SET(NARA_1986_FORMAT On)
    SET(NARA_1976_FORMAT Off)
    SET_SOURCE_FILES_PROPERTIES(nara_record.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/1986/nara_summary_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/1986/nara_district_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/1986/nara_school_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/1986/nara_summary.h;${CMAKE_CURRENT_SOURCE_DIR}/1986/nara_district.h;${CMAKE_CURRENT_SOURCE_DIR}/1986/nara_school.h")
ELSEIF (NARA_FORMAT EQUAL "1976")
    SET(NARA_1986_FORMAT Off)
    SET(NARA_1976_FORMAT On)
    SET_SOURCE_FILES_PROPERTIES(nara_record.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/1976/nara_classroom_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/1976/nara_district_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/1976/nara_school_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/1976/nara_classroom.h;${CMAKE_CURRENT_SOURCE_DIR}/1976/nara_district.h;${CMAKE_CURRENT_SOURCE_DIR}/1976/nara_school.h")
ELSE ()
    SET(NARA_1986_FORMAT Off)
    SET(NARA_1976_FORMAT Off)
    SET_SOURCE_FILES_PROPERTIES(nara_record.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/pre-1976/nara_classroom_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/pre-1976/nara_district_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/pre-1976/nara_school_impl.c;${CMAKE_CURRENT_SOURCE_DIR}/pre-1976/nara_classroom.h;${CMAKE_CURRENT_SOURCE_DIR}/pre-1976/nara_district.h;${CMAKE_CURRENT_SOURCE_DIR}/pre-1976/nara_school.h")
ENDIF()
TARGET_INCLUDE_DIRECTORIES(nara-to-yaml PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

CONFIGURE_FILE(nara_base.h.in nara_base.h)

INSTALL(TARGETS nara-to-yaml DESTINATION ${CMAKE_INSTALL_BINDIR})
